# alradai

./: .env.example  .env.local.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  FEATURES_GUIDE.md  FEATURE_ANSWERS.md  IMPLEMENTATION_SUMMARY.md  MOBILE.md  PERFORMANCE.md  PHASE_1_PLAN.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md  PHASE_4_PLAN.md  PHASE_5_PLAN.md  PHASE_6_PLAN.md  PHASE_7_PLAN.md  PHASE_8_PLAN.md  PHASE_9_PLAN.md  README.md  STEP_0_GAP_AUDIT.md  i18n.ts  index.html  index.txt  middleware.ts  navigation.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy-pages.yml
404/: index.html
app/: apple-icon.tsx  globals.css  icon.tsx  index.html  index.txt  layout.tsx  page.tsx  sitemap.ts  tracker.css
app/[locale]/: layout.tsx  not-found.tsx  page.tsx
app/_actions/: auth.ts  notes.ts
app/ai/: index.html  index.txt
app/analytics/: index.html  index.txt
app/app/: page.tsx
app/calendar/: index.html  index.txt
app/database/: index.html  index.txt
app/graph/: index.html  index.txt
app/habits/: index.html  index.txt
app/help/: index.html  index.txt
app/home/: index.html  index.txt
app/journal/: index.html  index.txt
app/media/: index.html  index.txt
app/notes/: index.html  index.txt
lib/: demo.ts  media.ts  store.ts  types.ts  utils.ts
messages/: ar.json  en.json
public/: manifest.webmanifest  robots.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
supabase/: config.toml  schema.sql
(+240 files in other folders)
