[package]
name = "notes-canvas"
version = "0.1.0"
description = "Notes Canvas — second brain."
authors = ["Notes Canvas"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "notes_canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
